--- a/src/app/components/movies/movie-list/movie-list.component.html
+++ b/src/app/components/movies/movie-list/movie-list.component.html
@@ -2,12 +2,14 @@
 
   <div class="row p-2">
     <div class="col-6">
+
       <div class="d-flex align-content-center justify-content-center text-center">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" (input)="buscar($event)">
         <div class="btn btn-dark">
           <fa-icon class="text-center align-content-center justify-content-center" [icon]="faMagnifyingGlass"></fa-icon>
         </div>
       </div>
+
     </div>
     <div class="col-6 d-flex align-content-center justify-content-center">
       <ngb-pagination [collectionSize]="total"
