--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,6 +12,11 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="movie-add">ADD Movie</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link position-relative" routerLink="movie-cart">Movies Cart
+            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-primary">{{carritoCount}}</span>
+          </a>
+        </li>
       </ul>
     </div>
   </div>
